--- a/Vidly/Views/Movies/Random.cshtml
+++ b/Vidly/Views/Movies/Random.cshtml
@@ -1,5 +1,28 @@
-﻿@model Vidly.Models.Movie
+﻿@using System.Collections.Generic
+@using Vidly.Models.DbModels;
+@model List<Movie>
 @{
     ViewData["Title"] = "Movies Page";
 }
-<h1>@Model.Name</h1>
+
+@if (Model.Count == 0)
+{
+    <text>No one has rent this movie before</text>
+}
+else
+{
+    <table>
+        <thead>
+            <tr>
+                Customers
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var movie in Model)
+            {
+            <tr>movie.Name</tr>
+            }
+        </tbody>
+        
+    </table>
+}
