--- a/Vidly/Views/Customer/Index.cshtml
+++ b/Vidly/Views/Customer/Index.cshtml
@@ -1,12 +1,28 @@
-﻿@model Vidly.ViewModels.RandomMovieVM
-<table>
-    <th>
-        Customers
-    </th>
-    <tbody>
-    @foreach(var customer in Model.Customers)
-    {
-            <tr>customer.Name</tr>
-    }
-    </tbody>
-</table>
+﻿@using Vidly.Models.DbModels
+@model List<Customer>
+@if (Model.Count == 0)
+{
+    <text>No one has rent this movie before</text>
+}
+else
+{
+    <table class="table table-bordered table-hover">
+        <tr>
+            <th scope="col">
+                Customers
+            </th>
+            <th scope="col">
+                MemberShip Type
+            </th>
+        </tr>
+        <tbody>
+            @foreach(var customer in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(customer.Name,"Details","Customer",new {id = customer.Id}, null)</td>
+                    <td>@customer.MembershipType.Name</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
