--- a/Vidly/wwwroot/css/site.css
+++ b/Vidly/wwwroot/css/site.css
@@ -69,3 +69,12 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*Custom address properties by developer */
+
+.field-validation-error {
+    color: red;
+}
+.input-validation-error{
+    border: 2px solid red;
+}
