--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.DbModels.
+﻿@model Vidly.Models.DbModels.Movie
 <h1>@Model.Name</h1>
 <br />  
 <li>Genre: @Model.Genres.Name</li>
